--- a/UIKitPractise/Base.lproj/Main.storyboard
+++ b/UIKitPractise/Base.lproj/Main.storyboard
@@ -20,6 +20,9 @@
                                 <rect key="frame" x="184" y="783" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchDown" id="rz5-IL-cTH"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
